<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainSwipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <ProgressBar
            android:id="@+id/pbLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginStart="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_25"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/autocomplete_fragment"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="357dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="@+id/imageButton"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageButton"
                    app:layout_constraintVertical_bias="0.488"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:verticalScrollbarPosition="right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.948"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@color/light_gray"
                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_40"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24"
                tools:text="@string/location" />

            <TextView
                android:id="@+id/tvUpdatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                tools:text="@string/update_at" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/detailsContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/sp_15"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/detailsContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center"
                android:src="@drawable/humidity"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/clear_sky"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/celsius"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_90" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTempMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvTempMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dp_20"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="@dimen/dp_25"
                        android:src="@drawable/sunrise"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tvSunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14"
                        tools:text="5:30am" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="@dimen/dp_25"
                        android:src="@drawable/sunset"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tvSunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14"
                        tools:text="5:30am" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="@dimen/dp_25"
                        android:src="@drawable/wind"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14"
                        tools:text="5:30am" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="@dimen/dp_25"
                        android:src="@drawable/pressure"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tvPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14"
                        tools:text="5:30am" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="@dimen/dp_25"
                        android:src="@drawable/humidity"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14"
                        tools:text="5:30am" />
                </LinearLayout>

                <Space
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/light_gray"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_8">

                    <ImageView
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="@dimen/dp_25"
                        android:src="@drawable/info"
                        app:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created_by"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tvInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/neon_rabbit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>